Implements status sync, invitation routes for projects and companies and new policies for the new routes/functions. Also does several tweaks, fixes and improvements
